--- a/index.html
+++ b/index.html
@@ -2,12 +2,66 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Мой первый сайт</title>
+  <title>Школа Volta — Beilen</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+      margin: 0;
+      padding: 20px;
+    }
+
+    header {
+      background-color: #004aad;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    section {
+      background: white;
+      margin-top: 20px;
+      padding: 15px;
+      border-radius: 8px;
+    }
+  </style>
 </head>
 <body>
 
-<h1>Привет!</h1>
-<p>Если ты это видишь — сайт работает 🎉</p>
+<header>
+  <h1>Школа Volta</h1>
+  <p>Город Beilen</p>
+</header>
+
+<section>
+  <h2>О школе</h2>
+  <p>
+    Школа Volta в городе Beilen — это современная школа, где ученики получают знания
+    и развивают свои навыки.
+  </p>
+</section>
+
+<section>
+  <h2>Обучение</h2>
+  <p>
+    В школе Volta изучают различные предметы, включая технологии, математику,
+    языки и практические навыки.
+  </p>
+</section>
+
+<section>
+  <h2>Почему Volta?</h2>
+  <ul>
+    <li>Хорошие учителя</li>
+    <li>Современные классы</li>
+    <li>Дружественная атмосфера</li>
+  </ul>
+</section>
+
+<footer>
+  <p>Учебный сайт — Volta Beilen</p>
+</footer>
 
 </body>
 </html>
+
